<resources>
    <string name="facebook_app_id">793439632563080</string>
    <string name="facebook_client_token">60c05d22cd9f716de233888370977857</string>
    <string name="app_name">Sovchi</string>
    <string name="qidirish">Qidirish</string>
    <string name="saqlangan">Yoqtirgan</string>
    <string name="nomzod">Nomzod</string>
    <string name="profil">Profil</string>
    <string name="akkauntga_kirish">Akkauntga kirish</string>
    <string name="auth_need_subtitle">Hamma funksiyalardan foydalanish uchun akauntga kiring yoki yangi akaunt oching</string>
    <string name="avtorizatsiya">Avtorizatsiya</string>
    <string name="mobil_raqamni_siting">Telefon raqam</string>
    <string name="_998">+998</string>
    <string name="davom_etish">Davom etish</string>
    <string name="sms_kod_yuborildi"> kod yubordik</string>
    <string name="sms_kodni_kiriting">Sms kodni kiriting</string>
    <string name="kodni_qayta_yuborish">Kodni qayta yuborish</string>
    <string name="ismingizni_kiriting">Ismingizni kiriting</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="parol_noturgri">Parol noturgri</string>
    <string name="keyinroq_urinib_koring">Juda kop martta urindingiz! Keyinroq urinib koring</string>
    <string name="xatolik_yuz_berdi">Xatolik yuz berdi</string>
    <string name="akaunt">Akaunt</string>
    <string name="oybek">Oybek</string>
    <string name="_998971871415">+998971871415</string>
    <string name="akauntdan_chiqish">Akauntdan chiqish</string>
    <string name="nomzod_turi">Nomzod turi</string>
    <string name="kelinlikga">Ayol</string>
    <string name="kuyovlikga">Erkak</string>
    <string name="tugilgan_yili">Yoshingiz</string>
    <string name="tugilgan_joyi">Tugilgan shaxar</string>
    <string name="manzili_toshkent">Shaxar</string>
    <string name="ismi">Ismi</string>
    <string name="bo_yi_170">Bo\'y sm</string>
    <string name="vazni">Vazn kg</string>
    <string name="farzandlar_soni">Farzandlar soni</string>
    <string name="millati">Millati</string>
    <string name="o_qish_malumoti">O\'qish malumot</string>
    <string name="oilaviy_holati">Oilaviy holati</string>
    <string name="ish_joyi">Ish joy</string>
    <string name="yosh_chegarasi">Yosh chegarsi</string>
    <string name="talablar">Talablar</string>
    <string name="telegram_profil">Telegram nikingiz</string>
    <string name="joylagan_odam">Joylagan odam</string>
    <string name="mobil_raqam">Mobil raqam</string>
    <string name="saqlash">Saqlash</string>
    <string name="to_ldiring">%1$s to\'ldiring!</string>
    <string name="kuyovlikga_nomzod">🤵‍♂️  Kuyovlikga nomzod</string>
    <string name="parametrlar">Parametrlar</string>
    <string name="nomzod_joylash">Nomzod joylash</string>
    <string name="kelinlikga_nomzod">👰🏻  Kelinlikga nomzod</string>
    <string name="mening_nomzodim">Mening nomzodim</string>
    <string name="_12">12</string>
    <string name="o_chirish">O\'chirish</string>
    <string name="ajrashgan">Ajrashgan</string>
    <string name="bo_ydoq">Oila qurmagan</string>
    <string name="beva">Beva</string>
    <string name="oilali">Oilali</string>
    <string name="aralash">Aralash</string>
    <string name="yil_oldin">yil oldin</string>
    <string name="oy_oldin">oy oldin</string>
    <string name="kun_oldin">kun oldin</string>
    <string name="sohat_oldin">soat oldin</string>
    <string name="daqiqa_oldin">daqiqa oldin</string>
    <string name="yaqinda">yaqinda</string>
    <string name="today">bugun</string>
    <string name="toshkent">Toshkent</string>
    <string name="toshkentVil">Toshkent viloyat</string>
    <string name="samarqand">Samarqand</string>
    <string name="nukus">Nukus</string>
    <string name="qashqa">Qashqadaryo</string>
    <string name="sirdaryo">Sirdaryo</string>
    <string name="surxon">Surhandaryo</string>
    <string name="termiz">Termiz</string>
    <string name="buxoro">Buxoro</string>
    <string name="hammasi">Hammasi</string>
    <string name="saqlanganlar_bo_sh">Saqlanganlar bo\'sh</string>
    <string name="xorazm">Xorazm</string>
    <string name="andi">Andijon</string>
    <string name="navoiy">Navoiy</string>
    <string name="jizzah">Jizzax</string>
    <string name="naman">Namangan</string>
    <string name="nomzod_haqida">Nomzod haqida</string>
    <string name="telefon_qilish">Telefon qilish</string>
    <string name="telegram">Telegram</string>
    <string name="farzandlar">Farzand</string>
    <string name="helper_farzandlar">Misol:  3 yosh ogil, 2 yosh qiz</string>
    <string name="yoq">Yo\'q</string>
    <string name="biz_bilan_bog_lanish">Biz bilan bog\'lanish</string>
    <string name="filter">Filter</string>
    <string name="necha_yosh_gacha">Necha yosh gacha?</string>
    <string name="yangi">Yangi</string>
    <string name="yangi_nomzod">Yangi nomzod</string>
    <string name="oliy">"Oliy ma\'lumot"</string>
    <string name="orta_maxsus">O\'rta maxsus</string>
    <string name="nomzodlar">Uy</string>
    <string name="nomzod_qo_shish">Elon</string>
    <string name="cheklangan">Cheklangan</string>
    <string name="o_zbek">O\'zbek</string>
    <string name="imkoniyati_cheklangan">Imkoniyati cheklangan (Invalid)</string>
    <string name="im_ch_m">Imkoniyati(Nuqsoni) cheklanganligi haqida</string>
    <string name="ma_lumot">Ma\'lumot</string>
    <string name="programmani_baholash">Ilovani baholash</string>
    <string name="nomzod_ismi">Nomzod ismi</string>
    <string name="farg_ona">Farg\'ona</string>
    <string name="your_web_client_id">310017818206-jtkhisrm8l78plo60286p1lhvjq6a087.apps.googleusercontent.com</string>
    <string name="ikkinchi_hotinlikka_mumkin">Ikkinchi hotinlikka mumkinmi?</string>
    <string name="kim_kerak">Kim kerak?</string>
    <string name="ozim_haqimda">Ozim haqimda:</string>
    <string name="qo_shimcha_malumot">Qo\'shimcha malumot:</string>
    <string name="alohida_yashash">A Alohida yashash</string>
    <string name="ruzgor_taqiq">Ikkinchi ro\'zgor yo\'q!</string>
    <string name="oila_qurmagan">Oila qurmagan</string>
    <string name="chat">Chat</string>
    <string name="nomzodingizni_qo_shing">Profilni to\'ldiring</string>
    <string name="qo_shimcha">Qo\'shimcha ma\'lumot</string>
    <string name="oila_qurmaganlar">Oila qurmagan bo\'lsin</string>
    <string name="oliy_mal">Oliy malumotli</string>
    <string name="bo_ydoqlar_yozmasin">Ajrashganlar va bevalar uchun</string>
    <string name="farzand_yoq">Farzandi yo\'q bo\'lsin</string>
    <string name="faqat_shaxar">Shaxarlik</string>
    <string name="faqat_viloyat">Viloyatlik</string>
    <string name="alohidauyjoy">Alohida uy joy</string>
    <string name="hijobda">Hijobda</string>
    <string name="qonuniy_ajrashgan">Faqat ajrashganlar va bevalar</string>
    <string name="rasmlar">Anketa rasmi</string>
    <string name="rasm_qo_shish">Rasm qo\'shish</string>
    <string name="foydalanuvchilar">Foydalanuvchilar</string>
    <string name="ma_lumoti">Ma\'lumoti:</string>
    <string name="kasbi">Kasb:</string>
    <string name="butun_uzbekiston">Butun O\'zbekiston</string>
    <string name="rasmi_borlar">Rasmi borlar</string>
    <string name="farzandlar_yo_q">Farzandim yo\'q</string>
    <string name="taqdir">Taqdir</string>
    <string name="o_xshash_nomzodlar">O\'xshash nomzodlar</string>
    <string name="yangi_nomzodlar">Yangi nomzodlar</string>
    <string name="suhbatlar">Suhbatlar</string>
    <string name="suhbatlar_bo_sh">Suhbatlar bo\'sh</string>
    <string name="sample_date">10.04.2024</string>
    <string name="nomzodni_ko_rish">Nomzodni ko\'rish</string>
    <string name="so_rov_yuborish">So\'rov yuborish</string>
    <string name="xabarlar">Xabarlar</string>
    <string name="nomzodim">Nomzodim</string>
    <string name="standart">Standart</string>
    <string name="bepul">Bepul</string>
    <string name="standartname">Boshlangich</string>
    <string name="top3name">Top 3 kun</string>
    <string name="top7name">Top 7 kun</string>
    <string name="premium">Premium</string>
    <string name="_15000_sum">15000 sum</string>
    <string name="yuborish">Yuborish</string>
    <string name="tekshirilmoqda">Tekshiruvda</string>
    <string name="chek">Chek</string>
    <string name="top">TOP</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="oddiy_joylash">Oddiy joylash</string>
    <string name="_3_kun_listni_tepasida_turadi">3 kun listni tepasida turadi</string>
    <string name="_7_kun_listni_tepasida_turadi">7 kun listni tepasida turadi</string>
    <string name="kamida_1ta_rasm_yuklang">Kamida 1 ta rasm yuklang, o\'zizni rasming bo\'lishi shart!</string>
    <string name="to_lash">To\'lash</string>
    <string name="sozlamalar">Nomzod sozlamalar</string>
    <string name="onlayn">Onlayn</string>
    <string name="views">marta ko\'rildi</string>
    <string name="tugatish">Tugatish</string>
    <string name="boshlash">Boshlash</string>
    <string name="no_internet">Internet bilan aloqa yo\'q</string>
    <string name="yopish">Yopish</string>
    <string name="keyinroq">Keyinroq</string>
    <string name="bor">Bor</string>
    <string name="operator">Operator</string>
    <string name="topkun">Top 1 kun</string>
    <string name="siz_uchun">Siz uchun</string>
    <string name="rasmli">Rasmli</string>
    <string name="after_mariage">To\'ydan keyin yashayamiz</string>
    <string name="oilangiz_haqida">Oilangiz haqida</string>
    <string name="hide_photo">Rasmni xiralashtirish</string>
    <string name="rad_etish">Rad etish</string>
    <string name="qabul_qilish">Qabul qilish</string>
    <string name="splash_title">Baxtingizni toping</string>
    <string name="splash_subtitle">Hafsiz, Ishonchli, Haqiqiy</string>
    <string name="start">Boshlash</string>
    <string name="google_orqali_kirish">Google orqali kirish</string>
    <string name="yoqtirgan">Yoqtirgan</string>
    <string name="added_toLikes">Yoqtirganlarga qo\'shildi!</string>
    <string name="removed_from_liked">Yoqtirganlardan olib tashlandi</string>
    <string name="didnt_like_item">Nomzod sizga yoqmadi !</string>
    <string name="reverse">Ortga qaytarish</string>
    <string name="fill_profile">To\'ldirish</string>
    <string name="aktiv">Aktiv</string>
    <string name="edit">O\'zgartirish</string>
    <string name="logout">Akkauntdan chiqasizmi?</string>
    <string name="close">Chiqish</string>
    <string name="cancek">Bekor</string>
    <string name="deleted">O\'chirilgan</string>
    <string name="toldirilgan">Toldirilgan</string>
    <string name="logout_">Akauntdan chiqish</string>
    <string name="off">O\'chiq</string>
    <string name="unpaid">To\'lanmagan</string>
    <string name="liked_you">Sizni yoqtirdi</string>
    <string name="yashaydi">Yashash manzil</string>
    <string name="tugilgan">Tugilgan</string>
    <string name="sodda">Sodda\n</string>
    <string name="hazilkash">Hazilkash</string>
    <string name="yoqgan">Yoqdi</string>
    <string name="sizni_yoqtrigan">Sizni yoqtirganlar</string>
    <string name="tanishing">Tanishing</string>
    <string name="yoqmagan">Sizga yoqmaganlar</string>
    <string name="not_found_users">Nomzodlar hozircha yo\'q</string>
    <string name="farzand">Farzand</string>
    <string name="yozing">Yozing</string>
    <string name="_15_05">15:05</string>
    <string name="chatlar_bo_sh">Chatlar bo\'sh</string>
    <string name="chatga_o_tish">Chatga o\'tish</string>
    <string name="bir_biringizga_yoqdingiz_endi_tanishing">Bir biringizga yoqdingiz, suxbatlashing!</string>
    <string name="to_ldirish">To\'ldirish</string>
    <string name="cheksiz_nomzodlar">Cheksiz nomzodlar</string>
    <string name="chatda_gaplashish">Suxbatga</string>
    <string name="rasmni_ko_rish">Rasmni ko\'rish</string>
    <string name="premiumga_o_tish">Premiumga</string>
    <string name="_35000_sum">35.000 sum</string>
    <string name="sotib_olish">Sotib Olish</string>
</resources>