<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/login_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:visibility="gone"
            style="@style/Text1_16"
            android:text="@string/auth_need_subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/akkauntga_kirish" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/boglanish_button_v"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            app:icon="@drawable/admin_ic"
            app:iconGravity="textStart"
            android:drawableTint="?colorPrimary"
            android:text="@string/biz_bilan_bog_lanish" />
    </LinearLayout>
</layout>